stylize chemistry page

--- a/content/posts/2023-01-31-PoTY-2022.md
+++ b/content/posts/2023-01-31-PoTY-2022.md
@@ -2,7 +2,7 @@
 title:  "Paper of the Year 2022"
 date: 2023-01-31
 section: chemistry
-category: analysis
+category: blog
 ---
 
 <style>x
@@ -33,7 +33,6 @@ We undertake a selectiion process that results in ~1500 papers in a primary list
 The motivating question is: 
 
 >***What insights can we gain from treating this list of documents as a corpus and applying statistical and semantic analysis to it?*** 
-
 ## The basics
 We selected 1379 papers this year. The breakdown by journals is:
 
@@ -65,7 +64,7 @@ Altogether, these papers constitute a corpus of around 3.8 million words, after 
 
 ***Are there words or phrases that occur with different frequencies between journal groups?***
 
-For this analysis we'll group the journals into Tiers 1 (*Science*, *Nature*, *J. Am. Chem. Soc.*, *Nat. Chem.*) and 2 (the rest). We can plot words based on their relative frequencies in Tier 1 and Tier 2 journals on two axes. The following plot was generated on **single word frequencies from the abstracts**. <mark>Click on the following plots to load the interactive versions</mark> (takes about a minute).
+For this analysis we'll group the journals into Tiers 1 (*Science*, *Nature*, *J. Am. Chem. Soc.*, *Nat. Chem.*) and 2 (the rest). We can plot words based on their relative frequencies in Tier 1 and Tier 2 journals on two axes. The following plot was generated on **single word frequencies from the abstracts**. Click on the following plots to load the interactive versions (takes about a minute).
 
 Each point on the plot is a word. Its position is determined by its frequency in Tier 2 journals (x axis) and Tier 1 journals (y axis). For example, "CH" in the top middle region of the plot, presumably related to CH functionalization, occurs more frequently in Tier 1 journals and Tier 2 journals. Not every word in the plot is labeled; if you want to look for a particular phrase (e.g. asymmetric), type it in "Search the chart". If you click on a word, you can see all the contexts in which the word occurred.
 
