--- a/content/posts/2024-04-02-kochi.md
+++ b/content/posts/2024-04-02-kochi.md
@@ -28,7 +28,8 @@ When aryl radicals are added to olefins, no vinyl polymers are detected, i.e. me
 Builds on Kharasch and Sonovsky. [**20**](https://doi.org/10.1021/ja00864a020) provides a mechanism that explains why butenes, when undergoing allylic oxidation, _do_ exhibit allylic isomerization unlike octene, for instance. (see [**19**](https://doi.org/10.1021/ja00868a011) for an explanation; excess Cu(II) suppresses isomerization). This is the mechanism involving release of free radicals (uncomplexed and therefore allowed to equilibrate). The paper also discusses how the allylic radical reacts with Cu(II); ligand transfer or electron transfer are both invoked (see [**13**](https://doi.org/10.1021/ja01469a055)). The difference is whether the allylic radical is oxidized to allylic cation discretely, before the Cu(II) ligand, e.g. halide or carboxylate, terminates the vacant C bond.
 
 [**19**](https://doi.org/10.1021/ja00868a011) reconciles the discrepancy between non-rearrangement of allylic oxid products when t-butoxy radical is used by Kharasch, and mixture of allylic isomers when benzoyl radical is used. This comes down to HAT with t-butoxy radical, vs addition with benzoyl radical. The scheme for benzoyl radical is
-![]({{ site.baseurl }}/assets/img/kochi_0.png)
+
+![](/posts/2024-04-02-kochi/kochi_0.png)
 
 [**22**](https://doi.org/10.1021/ja00873a029) describes reactions of t-butoxy radical with conjugated dienes; here it adds rather than abstracts H.
 
@@ -77,7 +78,7 @@ Remember that ligand transfer or electron transfer describe the outcome, not the
 [**57**](https://doi.org/10.1021/ja01026a022) does decarboxylation with Ce(IV). Photochemical decarboxylation was largely as expected; thermal is slower but enhanced by strong mineral or Lewis acids. The role of acids is proposed to be protonating and labilizing an acetate, leading to cationic Ce(IV) complex that then is more likely reduced. Alkyl radicals are shown to be intermediates.
 
 [**71**](https://doi.org/10.1021/ja00709a039) describes the Ag(I) catalysis of peroxydisulfate decarboxylation of acids. CO2 evolution is first order in both Ag(I) and peroxydisulfate. Ag(II) is proposed to be responsible for decarboxylation, either by HAT or coordination then homolysis of the carboxylate. Cu(II) salts can be added as cocatalysts, unsurprisingly at this point. THe compendium of decarboxylation/alkyl radical generation methods is below: from [**71**](https://doi.org/10.1021/ja00709a039)
-![]({{ site.baseurl }}/assets/img/kochi_1.png)
+![](/posts/2024-04-02-kochi/kochi_1.png)
 
 [**72**](https://doi.org/10.1021/ja00717a042) describes the Ag(II) oxidative decarboxylation of acids. The proposed mechanism is carboxylate oxidation to RCO2. and Ag(I), R. then reacts with another Ag(II)
 
@@ -137,7 +138,7 @@ Here comes the triad of papers:
 
 1. [**89**](https://doi.org/10.1021/ja00735a028) Ag(I): grignards and alkyl halides couple, catalyzed by Ag(I). This arises from two molecules of Ag-R coupling. One AgR is from Grignard displacing silver halide; the other is from Ag(0) abstracting halide from R. This is a bimolecular process since the rate of coupling rel. disproportionation increases with [Ag].
 2. [**92**](https://doi.org/10.1021/ja00735a029): Cu(I): argued to be dissimilar to Ag(I). The coupling, in addition, does not involve homolysis. Grignards can also disproportionate with alkyl halide (i.e. make alkene and alkane.)
-3. [**82**](https://doi.org/10.1021/ja00735a030): Fe: mechanistically a combination of Cu and Ag systems; Fe(0) abstracts X from R-X, makes Fe-R. R'MgBr makes Fe-R'. The two combine. 1-alkenyl halides are good for cross-coupling, and they propose the Grignard acts as a nucleophile directly on a Fe-coordinated alkenyl bromide. [**152**](https://doi.org/10.1021/jo00893a013) develops this chemistry to couple alkenyl halides and Grignards. [**165**](https://doi.org/10.1021/jo00865a019) examines alkenyl halide-Grignard coupling and proposes from mechanistic studies OA/TM/RE mechanism starting from Fe(I). The first ever cycle they draw in cycle form, incidentally, is this one: ![]({{ site.baseurl }}/assets/img/kochi_2.png) Disproportionation is observed, and can be explained by BHE/RE. Unlike Ni ([**151**](https://doi.org/10.1021/ja00858a011)), Fe works at lower loadings and is also stereospecific with no alkyl isomerization.
+3. [**82**](https://doi.org/10.1021/ja00735a030): Fe: mechanistically a combination of Cu and Ag systems; Fe(0) abstracts X from R-X, makes Fe-R. R'MgBr makes Fe-R'. The two combine. 1-alkenyl halides are good for cross-coupling, and they propose the Grignard acts as a nucleophile directly on a Fe-coordinated alkenyl bromide. [**152**](https://doi.org/10.1021/jo00893a013) develops this chemistry to couple alkenyl halides and Grignards. [**165**](https://doi.org/10.1021/jo00865a019) examines alkenyl halide-Grignard coupling and proposes from mechanistic studies OA/TM/RE mechanism starting from Fe(I). The first ever cycle they draw in cycle form, incidentally, is this one: ![](/posts/2024-04-02-kochi/kochi_2.png) Disproportionation is observed, and can be explained by BHE/RE. Unlike Ni ([**151**](https://doi.org/10.1021/ja00858a011)), Fe works at lower loadings and is also stereospecific with no alkyl isomerization.
 
 Generally, there are three mechanistic groups of metals that promote this function: Ag, Cu, and Mn/Co/Ni/Pd/Fe.
 
